--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,9 @@ body {
 img {
     width: 1000px;
     height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 table, th, td {
@@ -43,6 +46,7 @@ a:hover{
 header {
     margin: 80px;
     padding: 0;
+    text-align: center;
 
 }
 
@@ -59,4 +63,8 @@ footer {
     font-size: 40px;
     background-color: black;
     color: white;
+}
+
+#active{
+    color: orange;
 }
