--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,5 @@
 
 body {
-    
-    font-size: 35px;
     color: black;
 }
 
@@ -41,10 +39,13 @@ a:hover{
     color: blue;
 }
 
-header {
-    margin: 80px;
-    padding: 0;
 
+
+nav{
+    display: flex;           
+    flex-wrap: wrap;   
+    gap: 15px;
+    font-size: 20px;    
 }
 
 
