--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,5 @@
 
+
 body {
     color: black;
 }
@@ -58,11 +59,39 @@ main {
 
 footer {
     padding: 1px;
-    font-size: 40px;
+    font-size: 20px;
     background-color: black;
     color: white;
 }
 
 #active{
     color: orange;
+}
+
+@media (max-width: 400){
+    table{
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 600){
+    h1{
+        text-align: center;
+    }
+    nav{
+        text-align: center;
+        font-size: 25px;
+    }
+    img{
+        width: 100%;
+    }
+    table{
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 800px){
+    img{
+        width: 500px;
+    }
 }
